--- a/site.conf
+++ b/site.conf
@@ -13,8 +13,8 @@
   },
 
   -- Prefixes used within the mesh. Both are required.
-  prefix4 = '10.199.0.0/20',
-  prefix6 = 'fd01:0110:0110::/64',
+  prefix4 = '10.10.16.0/22',
+  prefix6 = 'fd10:b4dc:4b1e::/64',
 
   additional_prefix6 = { '2001:470:de94::/64' },
 
@@ -81,11 +81,11 @@
   -- connected to using a known IP address.
   next_node = {
     -- anycast IPs of all nodes
-    ip4 = '10.199.0.1',
-    ip6 = 'fd01:0110:0110::1',
+    ip4 = '10.10.0.1',
+    ip6 = 'fd10:b4dc:4b1e::1',
 
     -- anycast MAC of all nodes
-    mac = '16:41:95:40:f7:ad',
+    mac = '02:01:95:40:f7:ad',
   },
 
   -- Options specific to routing protocols (optional)
