--- a/site.conf
+++ b/site.conf
@@ -85,7 +85,7 @@
     ip6 = 'fd10:b4dc:4b1e::1',
 
     -- anycast MAC of all nodes
-    mac = '02:01:95:40:f7:ad',
+    mac = '02:00:0a:0a:00:01',
   },
 
   -- Options specific to routing protocols (optional)
