fix htmode for 8, 10 ch.

--- a/extra/ksia-3.conf
+++ b/extra/ksia-3.conf
@@ -40,7 +40,7 @@
   wifi24 = {
     -- Wireless channel.
     channel = 10,
-    htmode = 'HT40+',
+    htmode = 'HT40-',
     supported_rates = {6000, 9000, 12000, 18000, 24000, 36000, 48000, 54000},
     basic_rate = {6000, 9000, 18000, 36000, 54000},
     distance = 50,
