--- a/site.conf
+++ b/site.conf
@@ -45,6 +45,7 @@
     basic_rate = {6000, 9000, 18000, 36000, 54000},
     distance = 50,
     require_mode = 'g',
+    -- purge_txpower = true,
     tx_power = 30,
     htmode_noscan = 1,
     country = 'BO',
@@ -79,6 +80,7 @@
   wifi5 = {
     channel = 44,
     htmode = 'HT40+',
+    -- ac_htmode = '', 
     distance = 50,
     tx_power = 30,
     htmode_noscan = 1,
