Fix config files

--- a/extra/ksia-3.conf
+++ b/extra/ksia-3.conf
@@ -3,7 +3,7 @@
   hostname_prefix = '',
 
   -- Name of the community.
-  site_name = 'Kiwinet Šiauliai 10ch, 44ch',
+  site_name = 'Kiwinet Šiauliai 2.4Ghz - 6ch, 5Ghz - 44ch',
 
   -- Shorthand of the community.
   site_code = 'ksia',
@@ -19,8 +19,6 @@
   prefix4 = '10.10.16.0/22',
   prefix6 = 'fd10:b4dc:4b1e::/64',
 
-  additional_prefix6 = { '2001:470:de94::/64' },
-
   -- Timezone of your community.
   -- See http://wiki.openwrt.org/doc/uci/system#time_zones
   timezone = 'EET-2EEST,M3.5.0/3,M10.5.0/4',
@@ -34,20 +32,20 @@
    -- poe_passthrough = false,
 
   -- Wireless regulatory domain of your community.
-  regdom = 'BO',
+  regdom = 'US',
 
   -- Wireless configuration for 2.4 GHz interfaces.
   wifi24 = {
     -- Wireless channel.
-    channel = 10,
-    htmode = 'HT40-',
-    supported_rates = {6000, 9000, 12000, 18000, 24000, 36000, 48000, 54000},
-    basic_rate = {6000, 9000, 18000, 36000, 54000},
+    channel = 6,
+    htmode = 'HT40+',
+    supported_rates = {9000, 12000, 18000, 24000, 36000, 48000, 54000},
+    basic_rate = {9000, 18000, 36000, 54000},
     distance = 50,
     require_mode = 'g',
     tx_power = 30,
     htmode_noscan = 1,
-    country = 'BO',
+    country = 'US',
     -- rts_set = 1500,
     -- frag_set = 1532,
     -- nowmm = 0,
@@ -62,14 +60,14 @@
 
     mesh = {
       id = 'ksia-mesh',
-      mcast_rate = 6000,
+      mcast_rate = 12000,
       disabled = true,
     },
 
     ibss = {
       ssid = 'ksia-mesh-g',
       bssid = '02:0E:8E:1E:61:18',
-      mcast_rate = 6000,
+      mcast_rate = 12000,
     },
   },
 
@@ -82,7 +80,7 @@
     distance = 50,
     tx_power = 30,
     htmode_noscan = 1,
-    country = 'BO',
+    country = 'US',
    -- rts_set = 1500,
    -- frag_set = 1532,
    -- nowmm = 0,
@@ -93,13 +91,13 @@
     },
     mesh = {
       id = 'ksia-mesh',
-      mcast_rate = 6000,
+      mcast_rate = 12000,
       disabled = true,
     },
     ibss = {
       ssid = 'ksia-mesh-a',
       bssid = '02:0E:8E:1E:61:19',
-      mcast_rate = 6000,
+      mcast_rate = 12000,
     },
   },
 
@@ -130,7 +128,7 @@
   fastd_mesh_vpn = {
     -- List of crypto-methods to use.
     methods = {'salsa2012+umac'},
-    enabled = true,
+    enabled = false,
     configurable = true,
 
     mtu = 1280,
@@ -163,10 +161,10 @@
   -- tuneldigger
   tunneldigger_mesh_vpn = {
 
-    enabled = false,    
+    enabled = true,    
     mtu = 1280,
 
-    brokers = {'vpn.siauliai.kiwinet.eu:11001'},
+    brokers = {'vpn.siauliai.kiwinet.eu:11001', 'vpn-b1.kiwinet.eu:11001', 'vpn-b2.kiwinet.eu:11001'},
 
     bandwidth_limit = {
       enabled = false,
