--- a/extra/ksia-4.conf
+++ b/extra/ksia-4.conf
@@ -174,7 +174,7 @@
   },
 
   autoupdater = {
-    branch = 'experimental',
+    branch = 'stable',
     branches = {
       stable = {
         name = 'stable',
