--- a/site.conf
+++ b/site.conf
@@ -9,7 +9,7 @@
   site_code = 'ksia',
 
   opkg = {
-    openwrt = 'http://openwrt.draic.info/%n/%v/%S/packages',
+    lede = 'http://opkg.services.ffac/lede/snapshots/packages/%A',
     extra = {
       modules = 'http://6.siauliai.kiwinet.eu/firmware/experimental/modules/gluon-%GS-%GR/%S',
     },
