--- a/site.conf
+++ b/site.conf
@@ -9,7 +9,7 @@
   site_code = 'ksia',
 
   opkg = {
-    lede = 'http://opkg.services.ffac/lede/snapshots/packages/%A',
+    lede = 'http://downloads.lede-project.org/snapshots/packages/%A',
     extra = {
       modules = 'http://6.siauliai.kiwinet.eu/firmware/experimental/modules/gluon-%GS-%GR/%S',
     },
