--- a/site.conf
+++ b/site.conf
@@ -48,8 +48,8 @@
     -- Wireless channel.
     channel = 4,
     htmode = 'HT40+',
-    supported_rates = {9000, 12000, 18000, 24000, 36000, 48000, 54000},
-    basic_rate = {9000, 18000, 36000, 54000},
+    -- supported_rates = {9000, 12000, 18000, 24000, 36000, 48000, 54000},
+    -- basic_rate = {9000, 18000, 36000, 54000},
     distance = 50,
     require_mode = 'g',
     tx_power = 30,
