--- a/site.conf
+++ b/site.conf
@@ -102,6 +102,7 @@
       id = 'ksia-mesh',
       mcast_rate = 12000,
       disabled = true,
+      vxlan = false,
     },
     -- ibss = {
     --  ssid = 'ksia-mesh-a',
