mesh and next_node fix

--- a/site.conf
+++ b/site.conf
@@ -98,12 +98,7 @@
     ap = {
       ssid = 'KiwiNET',
     },
-    mesh = {
-      id = 'ksia-mesh',
-      mcast_rate = 12000,
-      disabled = true,
-      vxlan = false,
-    },
+
     -- ibss = {
     --  ssid = 'ksia-mesh-a',
     --  bssid = '02:0E:8E:1E:61:19',
@@ -118,6 +113,7 @@
   -- The next node feature allows clients to always reach the node it is
   -- connected to using a known IP address.
   next_node = {
+    name = { 'nextnode.kiwinet.eu' },
     -- anycast IPs of all nodes
     ip4 = '10.10.19.254',
     ip6 = 'fd10:b4dc:4b1e::1',
@@ -129,6 +125,10 @@
 
   -- Options specific to routing protocols (optional)
   mesh = {
+    vxlan = false,
+    id = 'ksia-mesh',
+    mcast_rate = 12000,
+    disabled = true,
     -- Options specific to the batman-adv routing protocol (optional)
     batman_adv = {
       -- Gateway selection class (optional)
