next_node name fix

--- a/site.conf
+++ b/site.conf
@@ -113,7 +113,7 @@
   -- The next node feature allows clients to always reach the node it is
   -- connected to using a known IP address.
   next_node = {
-    name = { 'nextnode.kiwinet.eu' },
+    name = { 'nextnode.kiwinet.eu', 'nextnode', 'nn' },
     -- anycast IPs of all nodes
     ip4 = '10.10.19.254',
     ip6 = 'fd10:b4dc:4b1e::1',
