--- a/site.conf
+++ b/site.conf
@@ -162,6 +162,7 @@
 
   mesh_vpn = {
     enabled = true,
+    mtu = 1312,
 
     fastd = {
       -- Refer to https://fastd.readthedocs.io/en/latest/ to better understand
