fix mesh and add dns for console.

--- a/site.conf
+++ b/site.conf
@@ -123,13 +123,14 @@
   mesh = {
     vxlan = true,
     batman_adv = {
+      gw_sel_class = 3,
       routing_algo = 'BATMAN_IV',
     },
   },
 
-  -- dns = {
-    -- servers = { '2001:db8::1', },
-  -- },
+  dns = {
+    servers = { 'fd10:b4dc:4b1e::a0a:2', 'fd10:b4dc:4b1e::a0a:102'},
+  },
 
   -- The next node feature allows clients to always reach the node it is
   -- connected to using a known IP address.
@@ -141,23 +142,6 @@
 
     -- anycast MAC of all nodes
     mac = '02:00:0a:0a:00:01',
-  },
-
-
-  -- Options specific to routing protocols (optional)
-  mesh = {
-    vxlan = false,
-    -- id = 'ksia-mesh',
-    -- mcast_rate = 12000,
-    -- disabled = true,
-    -- Options specific to the batman-adv routing protocol (optional)
-    batman_adv = {
-      -- Gateway selection class (optional)
-      -- The default class 20 is based on the link quality (TQ) only,
-      -- class 1 is calculated from both the TQ and the announced bandwidth
-      gw_sel_class = 3,
-      routing_algo = 'BATMAN_IV',
-    },
   },
 
   mesh_vpn = {
