--- a/site.conf
+++ b/site.conf
@@ -214,6 +214,12 @@
     },
   },
 
+  -- syslog = {
+  --   ip = "2001:db8::1",
+  --   port = 514,
+  --   proto = "udp",
+  -- },
+
   autoupdater = {
     branch = 'experimental',
     branches = {
