--- a/site.conf
+++ b/site.conf
@@ -44,8 +44,6 @@
     -- Wireless channel.
     channel = 4,
     htmode = 'HT40+',
-    supported_rates = {9000, 12000, 18000, 24000, 36000, 48000, 54000},
-    basic_rate = {9000, 18000, 36000, 54000},
     distance = 50,
     require_mode = 'g',
     tx_power = 30,
@@ -121,12 +119,9 @@
 
   -- Options specific to routing protocols (optional)
   mesh = {
-    -- Options specific to the batman-adv routing protocol (optional)
     batman_adv = {
-      -- Gateway selection class (optional)
-      -- The default class 20 is based on the link quality (TQ) only,
-      -- class 1 is calculated from both the TQ and the announced bandwidth
       gw_sel_class = 3,
+      routing_algo = 'BATMAN_IV',
     },
   },
 
