--- a/site.conf
+++ b/site.conf
@@ -1,4 +1,7 @@
 {
+  -- authorized_keys = { 'ssh-rsa AAA.... user1@host',
+  --                     'ssh-rsa AAA.... user2@host' },
+
   -- Used for generated hostnames, e.g. freifunk-abcdef123456. (optional)
   hostname_prefix = '',
 
@@ -260,4 +263,9 @@
       obligatory = true
     }
   },
+
+  radv_filterd = {
+    threshold = 20,
+  },
+
 }
