move to v0.7.005-master

--- a/site.conf
+++ b/site.conf
@@ -48,9 +48,9 @@
     tx_power = 30,
     htmode_noscan = 1,
     country = 'US',
-    -- rts_set = 1500,
-    -- frag_set = 1532,
-    -- nowmm = 0,
+    rts_set = 1500,
+    frag_set = 1532,
+    nowmm = 0,
     set_11w = 1,
 
 
@@ -84,10 +84,10 @@
     tx_power = 30,
     htmode_noscan = 1,
     country = 'US',
-   -- rts_set = 1500,
-   -- frag_set = 1532,
-   -- nowmm = 0,
-   set_11w = 1,
+    rts_set = 1500,
+    frag_set = 1532,
+    nowmm = 0,
+    set_11w = 1,
 
     ap = {
       ssid = 'KiwiNET',
