--- a/site.conf
+++ b/site.conf
@@ -44,14 +44,23 @@
     channel = 4,
     htmode = 'HT40+',
     distance = 50,
-    require_mode = 'g',
+    require_mode = 'n',
     tx_power = 30,
     htmode_noscan = 1,
     country = 'US',
-    rts_set = 1500,
-    frag_set = 1532,
+    --rts_set = 1500,
+    --frag_set = 1532,
     nowmm = 0,
     set_11w = 1,
+    -- ht_coex = 1,
+    -- isolate = 1,
+    -- ieee80211k = 1,
+    -- rrm_neighbor_report = 1,
+    -- rrm_beacon_report = 1,
+    -- ieee80211r = 1,
+    -- nasid = 'KiwiNettransKey5522',
+    -- mobility_domain = '5f85',
+    -- r1_key_holder = '00005f857274',
 
 
     -- ESSID used for client network.
@@ -70,7 +79,7 @@
       ssid = 'ksia-mesh-g',
       bssid = '02:0E:8E:1E:61:18',
       mcast_rate = 12000,
-      disabled = false,
+      disabled = true,
     },
   },
 
@@ -83,11 +92,13 @@
     distance = 50,
     tx_power = 30,
     htmode_noscan = 1,
+    require_mode = 'n',
     country = 'US',
-    rts_set = 1500,
-    frag_set = 1532,
+    --rts_set = 1500,
+    --frag_set = 1532,
     nowmm = 0,
     set_11w = 1,
+    -- isolate = 1,
 
     ap = {
       ssid = 'KiwiNET',
@@ -101,7 +112,7 @@
       ssid = 'ksia-mesh-a',
       bssid = '02:0E:8E:1E:61:19',
       mcast_rate = 12000,
-      disabled = false,
+      disabled = true,
     },
   },
 
